# Cortex

./: .bddc.toml  .credo.exs  .gitignore  AGENTS.md  GEMINI.md  LICENSE  README.md  README_CN.md  build.sh  mix.exs
.github/: Coding Guidelines and Tools.md  Leveraging the Knowledge Base.md  copilot-instructions.md  kb-api.prompt.md  kb-design.prompt.md
.github/Guidelines/: Building.md  Debugging.md  ElixirStyleGuide.md  Running-CLI.md  Running-UnitTest.md  SourceFileManagement.md
.github/KnowledgeBase/: Index.md  KB_Agent_Task_Workflow.md  KB_Jido_Studio_Building.md  KB_Jido_Studio_Choosing_APIs.md  KB_Memory_History_Architecture.md  KB_Tool_BCC.md  KB_Tool_BDDC.md  KB_Tool_Taskctl.md
.github/docs/: custom-beam-setup.md  livebook-comparison.md  runner-compatibility.md  test-branch-guide.md
.github/prompts/: 2-planning.prompt.md  feature_iteration.md
.github/scripts/: setup-beam.sh
.github/tools/: bddc-win-amd64  bddc-win-amd64.cmd  taskctl-linux-x86_64
.github/workflows/: build-release-custom-beam.yml  build-windows.yml  release.yml  test-beam-setup.yml
assets/: package.json  tailwind.config.js  tsconfig.json  vite.config.js
assets/css/: animations.css  app.css  design-tokens.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: MEMORY_SYSTEM.md
docs/guides/: wsl_development_guide.md  (+2 more)
lib/: cortex.ex  cortex_web.ex
scripts/: bdd_gate.sh  bump_version.sh  pre_deploy_check.sh  setup_env_for_ubuntu.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  lib.rs.backup
test/: test_helper.exs
(+472 files in other folders)
