[package]
name = "beam_scribe"
version = "0.1.0"
description = "Cortex Desktop - AI-Powered Chat Application"
authors = ["Cortex Team"]
edition = "2021"

[[bin]]
name = "Cortex"
path = "src/main.rs"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"

